# zhocr

./: .gitignore  README.md  main.py  pyproject.toml
docs/: architecture.md  benchmark.md  caching_and_refinement.md  presence_detection.md
src/: __init__.py  cache.py  ocr.py  presence.py  shift_timestamps.py  strategies.py  subtitle.py  video.py
test/: test_processors.py
